# MMapper

./: .gitignore  AGENTS.md  AUTHORS.txt  AppxManifest.xml  AppxManifest.xml.in  BUILD.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Dockerfile  NEWS.md  README.md  TESTING_INSTANCING.md  Textures.cpp.tmp  build.sh  build_log.txt  check_cmake.py  check_cmake_v2.py  check_cmake_v3.py  check_cmake_v4.py  cmake_install.cmake  fix_all.py  fix_all_const.py  fix_config.py  fix_config_final.py  font.patch  formatted.h  generate_clouds.py  grep_getOutputDeviceId.txt  grep_output.txt  grep_output_no_audio.txt  iwyu-mapping-stl.imp  main_cow_test.cpp  mmapper.pro  org.mume.MMapper.json  snapcraft.yaml  test_manifest.json
.github/workflows/: build-appimage.yml  build-appx.yml  build-clang-format.yml  build-flatpak.yml  build-release.yml  build-snap.yml  build-test.yml  build-wasm.yml  deploy-beta.yml  deploy-pages.yml  upload-beta.yml  upload-pages.yml  upload-release.yml
.qt/: QtDeploySupport.cmake
appdata/: cmake_install.cmake  org.mume.MMapper.appdata.xml  org.mume.MMapper.appdata.xml.in
cmake/: AppxManifest.xml.in  DownloadCoi.cmake  FindQtKeychain.cmake  GenerateManifest.cmake  GenerateManifestQrc.cmake  MakeAppX.cmake.in  PatchWasmHtml.cmake  WasmHtml.cmake  appx.cmake.in  msix.cmake  msix.cmake.in
docs/: _config.yml  about.md  architecture.md  changes.md  index.md  linux.md  macos.md  qml-migration.md  windows.md
docs/_includes/: requirements.md
docs/_layouts/: default.html
src/: CMakeLists.txt  Version.cpp  WindowsNSIS.nsh.in  build.qrc  cmake_install.cmake  main.cpp  mmapper.pro  odr.cpp  org.mume.MMapper.desktop
src/adventure/: AdventureLogModel.cpp  AdventureLogModel.h  AdventureViewModel.cpp  AdventureViewModel.h  XPStatusViewModel.cpp  XPStatusViewModel.h  XpStatusAdapter.cpp  XpStatusAdapter.h  adventurewidget.cpp  adventurewidget.h  xpstatuswidget.cpp  xpstatuswidget.h
src/audio/: AudioLibrary.cpp  AudioLibrary.h  AudioManager.cpp  AudioManager.h  MusicManager.cpp  MusicManager.h  SfxManager.cpp  SfxManager.h
src/autologger/: autologger.cpp  autologger.h
src/client/: AudioHintWidget.cpp  AudioHintWidget.h  ClientController.cpp  ClientController.h  ClientLineModel.cpp  ClientLineModel.h  ClientTelnet.cpp  ClientTelnet.h  ClientTelnetBackend.cpp  ClientTelnetBackend.h  ClientWidget.cpp  ClientWidget.h  ClientWidgetViewModel.cpp  ClientWidgetViewModel.h  DisplayViewModel.cpp  DisplayViewModel.h  Hotkey.cpp  Hotkey.h  HotkeyMacros.h  HotkeyManager.cpp  HotkeyManager.h  InputHistory.cpp  InputHistory.h  InputViewModel.cpp  InputViewModel.h  PaletteManager.cpp  PasswordDialog.cpp  PasswordDialog.h  PasswordViewModel.cpp  PasswordViewModel.h  PreviewViewModel.cpp  PreviewViewModel.h  PreviewWidget.cpp  PreviewWidget.h  StackedInputViewModel.cpp  StackedInputViewModel.h  UserActionManager.cpp  UserActionManager.h  displaywidget.cpp  displaywidget.h  (+4 more)
src/clock/: ClockAdapter.cpp  ClockAdapter.h  ClockStrings.cpp  ClockStrings.h  MumeClockViewModel.cpp  MumeClockViewModel.h  mumeclock.cpp  mumeclock.h  mumeclockwidget.cpp  mumeclockwidget.h
src/comms/: CommsManager.cpp  CommsManager.h  CommsWidget.cpp  CommsWidget.h
src/configuration/: ConfigValue.h  GroupConfig.cpp  GroupConfig.h  HotkeyMacros.h  HotkeyManager.cpp  HotkeyManager.h  NamedConfig.h  PasswordConfig.cpp  PasswordConfig.h  configuration.cpp  configuration.h
src/display/: AnimationManager.cpp  AnimationManager.h  AsyncMapAreaManager.cpp  AsyncMapAreaManager.h  AudioHintWidget.cpp  CharacterBatches.cpp  CharacterBatches.h  Characters.cpp  Characters.h  ChunkMeshes.h  ConnectionLineBuilder.cpp  Connections.cpp  Connections.h  Fbo.cpp  Fbo.h  Filenames.cpp  Filenames.h  FrameManager.cpp  FrameManager.h  IMapBatchesFinisher.h  InfoMarkSelection.cpp  InfoMarkSelection.h  Infomarks.cpp  Infomarks.h  MapBatches.h  MapCanvasConfig.h  MapCanvasCore.cpp  MapCanvasCore.h  MapCanvasCore_gl.cpp  MapCanvasData.cpp  MapCanvasData.h  MapCanvasQuickItem.cpp  MapCanvasQuickItem.h  MapCanvasRoomDrawer.cpp  MapCanvasRoomDrawer.h  MapCanvasRoomDrawer_fixed.cpp  MapCanvasUnderlayItem.cpp  MapCanvasUnderlayItem.h  MapCanvasUtils.cpp  MapCanvasUtils.h  (+34 more)
src/global/: AnsiHtml.cpp  AnsiHtml.h  AnsiOstream.cpp  AnsiOstream.h  AnsiTextUtils.cpp  AnsiTextUtils.h  AsyncMeshManager.h  AsyncResourceManager.cpp  AsyncTasks.cpp  AsyncTasks.h  BppOrderedSet.h  ChangeMonitor.h  Charset-Utf8.cpp  Charset.cpp  Charset.h  CompareVersion.cpp  CompareVersion.h  ConfigConsts-Computed.h  ConfigConsts.h  ConfigEnums.h  CopyOnWrite.h  Diff.cpp  EnumIndexedArray.h  FixedPoint.h  INamedConfig.h  ImmIndexedVectorWithDefault.h  ImmOrderedSet.h  ImmOrderedSetChunkView.h  JsonObj.cpp  MMapperCore.cpp  MMapperCore.h  NamedColors.cpp  NamedColors.h  OrderedSet.h  PackageType.h  Signal2.h  SignalBlocker.cpp  SignalBlocker.h  StorageUtils.cpp  TaggedInt.h  (+20 more)
src/group/: CGroupChar.cpp  CGroupChar.h  GroupController.cpp  GroupController.h  GroupManagerApi.cpp  GroupManagerApi.h  GroupModel.cpp  GroupModel.h  GroupWidgetViewModel.cpp  GroupWidgetViewModel.h  (+6 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  FakeClientBackend.cpp  FakeClientBackend.h  TestCTimers.cpp  TestCTimers.h  TestClient.cpp  TestClient.h  TestClientPage.cpp  TestClientPage.h  TestClientWidget.cpp  TestClientWidget.h  TestConfigDialog.cpp  TestConfigDialog.h  TestCow.cpp  TestCow.h  TestFBO.cpp  TestFBO.h  TestFrameManager.cpp  TestFrameManager.h  TestGlobal.cpp  TestGlobal.h  TestGroup.cpp  TestGroup.h  TestGroupPage.cpp  TestGroupPage.h  TestGroupWidget.cpp  TestGroupWidget.h  TestHotkeyManager.cpp  TestHotkeyManager.h  TestMainWindow.cpp  TestMainWindow.h  TestMap.cpp  TestMap.h  TestMapCanvasRoomDrawer.cpp  TestMapHasMeshDifferencesForArea.cpp  TestMedia.cpp  TestMedia.h  TestMmapper2Group.cpp  TestMmapper2Group.h  (+30 more)
tests/display/: MapCanvasIntegrationTests.md  TestAsyncMapAreaManager.cpp  TestAsyncMapAreaManager.h
tests/mapdata/: test_mapdata_applychanges_areas.cpp
tests/roompanel/: TestRoomManager.cpp  TestRoomManager.h
(+669 files in other folders)
